--- a/about.html
+++ b/about.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar</title>
+    <title>About us</title>
+    <link
+      rel="icon"
+      href="https://www.lyst.com/favicon.ico"
+      type="image/icon type"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -101,6 +106,50 @@
       </div>
     </div>
 
+    <div id="about">
+      <h3>About us</h3>
+      <p>Lyst is a fashion technology company, and premium shopping app.</p>
+      <p>
+        For over 160 million annual shoppers, we offer the most comprehensive
+        range of products from 17,000 of the world’s leading brands and stores.
+      </p>
+      <p>
+        For brands and stores, our goal is to power success online. We drive
+        meaningful direct sales within a highly trusted brand environment.
+      </p>
+      <img
+        src="https://cdna.lystit.com/cms/ENG_header_XL_9f9e2af236_615828663f.jpg"
+        alt=""
+      />
+      <p>
+        Lyst operates an inventory free platform, and uses a proprietary data
+        engine to provide each customer with a highly personalised shopping
+        experience. Orders are fulfilled by the thousands of brands and stores
+        which partner with Lyst.
+      </p>
+      <p>
+        Brands available on Lyst include Balenciaga, Balmain, Bottega Veneta,
+        Burberry, Fendi, Gucci, Moncler, Off-White, Prada, Saint Laurent and
+        Valentino.
+      </p>
+      <p>
+        We’re a mix of fashion lovers, technologists and data experts. Two
+        thirds of Lyst talent are engineers, scientists and product people.
+        We’re focused on ways technology can delight both our customers and our
+        brand & store partners.
+      </p>
+      <p>
+        Lyst is also a unique source of fashion data insights, and is
+        responsible for The Lyst Index, the industry leading report of the
+        hottest brands and products worldwide.
+      </p>
+      <p>
+        Lyst was founded in London in 2010, and is backed by investors including
+        certain funds managed by Fidelity International, C4 Ventures, Draper
+        Esprit, Steadfast Financial, Balderton Capital and LVMH.
+      </p>
+      <p></p>
+    </div>
     <div id="footer">
       <div>
         <img
