--- a/help.html
+++ b/help.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar</title>
+    <title>Help Page</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      href="https://www.lyst.com/favicon.ico"
+      type="image/icon type"
+    />
   </head>
   <body>
     <link
@@ -100,7 +105,15 @@
         </div>
       </div>
     </div>
-
+    <div id="help2">
+      <img
+        src="(https://img.freepik.com/free-vector/customer-support-background_1212-247.jpg"
+        alt=""
+      />
+      <h1>How can we help you?</h1>
+      <input type="text" placeholder="Describe your issue here..." />
+      <a href="about.html"><p>Read more about Lyst</p></a>
+    </div>
     <div id="footer">
       <div>
         <img
